tests/snapshots/integration__integration_tests__user_hooks__foreground_concurrent_hook_spawn_failure_has_one_io_detail.snap
---
source: tests/integration_tests/user_hooks.rs
expression: stderr
---
[36m◎[39m [36mRunning post-start [1muser:move[22m[39m
[107m [0m [2m[0m[2m[34mmv[0m[2m _REPO_.move-away _REPO_.move-away.moved[0m
[0m[36m◎[39m [36mRunning post-start [1muser:check[22m[39m
[107m [0m [2m[0m[2m[34mtrue[0m
[36m◎[39m [36mRunning post-start [1muser:sibling[22m[39m
[107m [0m [2m[0m[2m[34mtrue[0m
[31m✗[39m [31m[1mpost-start user:check[22m failed[39m
[107m [0m Failed to execute sh @ _REPO_.move-away
[107m [0m No such file or directory (os error 2)
[31m✗[39m [31m[1mpost-start user:sibling[22m failed[39m
[107m [0m Failed to execute sh @ _REPO_.move-away
[107m [0m No such file or directory (os error 2)
